Bug 1406981 - Block MOTU 828mk3 to get preferred channel layout